# stroke-prediction-api

./: .dockerignore  .dvcignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  dockerfile  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/processed/: .gitignore  test-stroke-data.csv.dvc  train-stroke-data.csv.dvc
evidently_report/: model_quality_report.html
models/: .gitignore
notebooks/: 0-data-exploration.ipynb  1-data-preprocessing.ipynb  1-sampler-testing.ipynb  2-model-prototype.ipynb  3-model-runtime-test.ipynb  4-model-monitoring.ipynb
reports/: references.bib  report.ipynb
reports/_extensions/cpe_report/: _extension.yml  template.typ  typst-template.typ
src/app/: main.py  util.py
src/app/models/: predict.py
src/evidently/app/: main.py  runtest.py
src/evidently/workspace/0197165d-4206-7a64-8e45-62e1896a1af7/: dashboard.json  metadata.json
src/evidently/workspace/0197165d-4206-7a64-8e45-62e1896a1af7/snapshots/: 0197165e-ecb4-7653-8b4f-5d4fafcf5733.json
src/stroke_prediction/: __init__.py  config.py  evaluate.py  plot.py  preprocess.py  train.py  util.py
